[project]
name = "solver-analytics"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Evan-Kim2028", email = "ekcopersonal@gmail.com" }
]
dependencies = [
    "polars>=1.8.2",
    "ipykernel>=6.29.5",
    "altair>=5.4.1",
    "marimo>=0.8.22",
    "pyarrow>=17.0.0",
    "vegafusion[embed]>=1.6.9",
    "hypermanager>=0.1.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/solver_analytics"]
